# suzunaan

./: .gitignore  CMakeLists.txt  CmakeLists.txt  README.md  cmake_configure.sh  cmake_configure_linux.sh
engine/: .gitignore  CMakeLists.txt  OBJ_Loader.h  README.md  cmake_configure.sh  debug.cpp  debug.hpp  engine.cpp  engine.h  engine.hpp  engine_gl.cpp  engine_gl.h  engine_gl.hpp  engine_helper.cpp  engine_helper.h  engine_helper.hpp  gl.cpp  gl.hpp  glad.c  input.cpp  input.hpp  stb_image.cpp  util.cpp  util.h
engine/glad/: glad.h
engine/libs/: single_file.cpp  stb_image.cpp
engine/libs/imgui/: CMakeLists.txt  imconfig.h  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_opengl3_loader.h  imgui_internal.h
res/: suzunaan.ini
res/common/: suzunaan.ini
res/common/data/script/: boot_on_head.txt  scriptloader.txt  spawner.txt  testenemy.txt  teststage.txt  toziko.txt
res/common/data/shaders/: model.frag  shader3d.vert  spritesheet.vert
res/data/script/: miko.txt  scriptloader.txt  testbullet.txt  teststage.txt
res/script/: b.txt  boot_on_head.txt  boss.txt  miko.txt  scriptloader.txt  stageloader.txt  testbullet.txt  testenemy.txt  testenemy1.str  teststage.txt  toziko.txt
res/shaders/: flat.frag  flat.vert  model.frag  shader3d.frag  sprite.frag  sprite.vert  spritesheet.frag  spritesheet.vert  spritesheet_invert.frag
source/: game.cpp  game.h  main.cpp  menu.cpp  script.md  script.txt  state.cpp  state.hpp
source/content/: bullet.cpp  bullet.h  bullet.hpp  enemy.cpp  enemy.h  enemy.hpp  menu.cpp  player.cpp  player.h  player.hpp  script.cpp  script.h  script.hpp  teststage.cpp
source/content/script/test/: testbullet.cpp  testbullet.hpp
source/game/: CMakeLists.txt  background.cpp  bullet.cpp  bullet.hpp  enemy.cpp  enemy.hpp  menu.cpp  player.cpp  player.hpp  script.cpp  script.hpp  stage.cpp  test3d.cpp
source/script/: as_jit.cpp
source/script/test/: testbullet.cpp  testbullet.hpp  testenemy.cpp  testenemy.hpp  teststage.cpp  teststage.hpp
